# yatzy-monorepo

./: .claudeignore  .env.prod.example  .gitignore  .mdev  .trivyignore  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
auth/: .dev  .env  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
auth/app/: config.py  database.py  main.py
auth/app/users/: reset_repository.py  token_repository.py  token_store_repository.py  user.py  user_repository.py  user_router.py  verification_repository.py
auth/migrations/: 20260323000001_users.sql  20260323000002_refresh_tokens.sql  20260327000003_email_verified_at.sql  20260327000004_email_verifications.sql  20260327000005_password_reset_tokens.sql
auth/scripts/: seed.sh
auth/src/app/: config.py  email.py  main.py
auth/src/app/users/: auth.py  dev_router.py  reset_repository.py  token_repository.py  user.py  user_repository.py  user_router.py  verification_repository.py
auth/src/tests/e2e/: conftest.py  test_user_router.py
auth/src/tests/unit/: test_auth.py
auth/tests/e2e/: conftest.py  test_user_router.py
auth/tests/unit/: test_auth.py
backend/: .dev  .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
backend/.claude/agents/: code-improver.md
backend/.github/workflows/: ci.yml
backend/app/: auth.py  config.py  database.py  dice_response.py  die.py  game.py  game_join.py  game_player_repository.py  game_repository.py  game_router.py  game_start.py  game_state.py  game_state_repository.py  game_status.py  main.py  player.py  player_repository.py  player_router.py  roll_repository.py  roll_request.py  score_calculator.py  score_category.py  score_request.py  scorecard.py  scorecard_repository.py  scorecard_router.py  turn_repository.py
backend/app/games/: dice.py  game.py  game_mode.py  game_player_repository.py  game_repository.py  game_router.py  game_state.py  game_state_repository.py  game_variant.py  guards.py  requests.py  roll_repository.py  turn_repository.py
backend/app/players/: player.py  player_repository.py  player_router.py  player_stats.py  player_stats_repository.py
backend/app/scoring/: games_played.py  games_played_repository.py  high_score.py  high_scores_repository.py  score_calculator.py  scorecard.py  scorecard_repository.py  scorecard_router.py  scoring_rules.py
backend/migrations/: 001_players.sql  002_games.sql  003_turns.sql  004_rolls_used.sql  005_turns_deleted_at.sql  006_scorecard_entries.sql  007_saved_rolls.sql  008_rolls_remaining.sql  20260101000001_players.sql  20260101000002_games.sql  20260101000003_turns.sql  20260101000004_scorecard_entries.sql  20260323000001_add_abandoned_status.sql  20260324000001_add_account_id_to_players.sql  20260325000001_add_game_mode.sql  20260327000001_add_yatzy_game_modes.sql  20260327000002_rename_game_modes.sql  20260418000001_add_is_bot_to_players.sql  20260425000001_add_has_picture_to_players.sql
backend/scripts/: format-entrypoint.sh  lint-entrypoint.sh
backend/src/app/: bot_client.py  bot_service.py  config.py  database.py  events.py  main.py
backend/src/app/games/: dice.py  game.py  game_player_repository.py  game_repository.py  game_router.py  game_state.py  game_state_repository.py  game_status.py  guards.py  requests.py  roll_repository.py  turn_repository.py  turn_service.py
backend/src/app/players/: game_history.py  game_history_repository.py  player.py  player_repository.py  (+3 more)
backend/tests/e2e/: conftest.py  games.py  helpers.py  players.py  scorecards.py  scoring_options.py  test_abort_game.py  test_create_game.py  test_delete_game.py  test_delete_player.py  test_end_game.py  test_game_flow.py  test_games_played_leaderboard.py  test_get_game.py  test_get_game_state.py  test_get_games.py  test_get_player.py  test_get_players.py  test_get_scorecard.py  test_high_scores.py  test_join_game.py  test_leave_game.py  test_player_crud.py  test_player_stats.py  test_players.py  test_roll_dice.py  test_score_category.py  test_scoreboard.py  test_scoring_options.py  test_sequential_mode.py  test_start_game.py  test_update_player.py  test_yatzy_mode.py
backend/tests/unit/: repository_test_case.py  test_game_player_repository.py  test_game_repository.py  test_game_state_repository.py  test_guards.py  test_player_repository.py  test_roll_repository.py  test_score_calculator.py  test_scorecard_repository.py  test_scoring_rules.py  test_sequential_guard.py  test_turn_repository.py
bot/: .dev  ACTION_ENDPOINT.md  CLAUDE.md  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
bot/app/: action.py  main.py
bot/app/sim/: bot_core.py  dice_keep.py  engine.py  game_state.py  maxi_bot.py  rule_bot.py
bot/scripts/: evaluate.py
bot/sim/: engine.py  rule_bot.py
bot/src/app/: main.py
bot/tests/: test_action.py  test_endpoint.py  test_keep_strategy.py
cli/: .dev  Dockerfile  Makefile  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
cli/src/: main.py
cli/src/yatzy/: api.py  auth.py  credentials.py  display.py  game.py
cli/tests/integration/: conftest.py  test_auth_flow.py  test_game_actions.py  test_game_flow.py
cli/tests/unit/: test_api.py  test_api_client.py  test_credentials.py  test_display.py  test_display_scorecards.py  test_game.py
cli/yatzy/: api.py  auth.py  ui.py
rl/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
rl/rl/env/: yatzy_env.py
rl/rl/train/: evaluate.py  imitate.py  train.py
shared/: Dockerfile  Makefile  docker-compose.yml  pyproject.toml
shared/tests/: test_score_calculator.py  test_scoring_rules.py
shared/yatzy_rules/: game_mode.py  game_variant.py  score_calculator.py  score_category.py
yatzy_rules/: .dev  Dockerfile  pyproject.toml
yatzy_rules/src/tests/: test_scoring_rules.py
yatzy_rules/src/yatzy_rules/: game_variant.py  score_category.py
(+233 files in other folders)
