[project]
name = 'yatzy-backend'
version = '0.1.0'
requires-python = '>=3.14'
dependencies = ['fastapi[standard]', 'aiomysql', 'pydantic-settings', 'cryptography']

[project.optional-dependencies]
dev = ['pytest', 'pytest-asyncio', 'httpx', 'ruff', 'ty', 'pytest-cov']

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.pytest.ini_options]
asyncio_mode = 'auto'
testpaths = ['tests']
