[project]
name = 'yatzy-rl'
version = '0.1.0'
requires-python = '>=3.14'
dependencies = [
  'gymnasium>=1.0',
  'stable-baselines3>=2.3',
  'sb3-contrib>=2.3',
  'numpy>=1.26',
  'torch>=2.2',
  'tensorboard>=2.16',
  'tqdm>=4.0',
  'yatzy-rules',
]

[project.optional-dependencies]
dev = [
  'pytest',
  'ruff',
]

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[[tool.uv.index]]
name = 'pytorch-cpu'
url = 'https://download.pytorch.org/whl/cpu'
explicit = true

[tool.uv.sources]
torch = [{ index = 'pytorch-cpu' }]
yatzy-rules = {path = '../shared'}

[tool.pytest.ini_options]
testpaths = ['tests']
