[project]
name = 'yatzy-rules'
version = '0.1.0'
requires-python = '>=3.12'
dependencies = []

[project.optional-dependencies]
dev = ['pytest', 'pytest-cov', 'ruff', 'ty', 'bandit']

[tool.pytest.ini_options]
testpaths = ['src/tests']

[tool.coverage.run]
source = ['yatzy_rules']

[tool.coverage.report]
fail_under = 80

[tool.coverage.paths]
source = ['src/yatzy_rules/', '/workspace/src/yatzy_rules/']

[tool.ruff]
indent-width = 2

[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

